fixed spacing and table

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,6 +6,8 @@
   justify-content: space-between;
   padding: 10px;
   box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+  background-color: #2E3138;
+  color: #CACACA;
 }
 
 .spacer {
